# HealthinClimate

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.agents/skills/data-provenance/: SKILL.md
.agents/skills/dataset-triage/: SKILL.md
.agents/skills/health-climate-idea-selector/: SKILL.md
.agents/skills/judge-demo-builder/: SKILL.md
app/: index.html
data/samples/: cached_weather.json
docs/: DASHBOARD_WALKTHROUGH.md  HeatGuard_London_Hackathon_2026.pptx
docs/datasets/: README.md
landing/: index.html
research/mariam/heatguard/: .gitignore  LICENSE  README.md  datasets.md  requirements.txt  streamlit_app.py
research/mariam/heatguard/data/: economics.json  locales.json  nicaragua_baseline.json
scripts/: run_demo.sh
scripts/data/: install-datasets.ps1
scripts/setup/: run.ps1
src/: server.py
src/heatguard/: __init__.py  _paths.py  api.py  calendar_ban.py  cli.py  compliance.py  economics.py  hydration.py  impact.py  scale.py  schedule.py  service.py  sites.py  solar.py  types.py  wbgt.py  weather.py  worktables.py
src/heatguard/weather/: __init__.py  openmeteo.py
tests/: conftest.py  test_acclimatization.py  test_economics.py  test_hydration.py  test_scheduler.py  test_wbgt.py
web/: package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: AcclimatizationTracker.tsx  BanVsAdaptiveTimeline.tsx  ComplianceFeed.tsx  EconomicsPanel.tsx  ImpactPanel.tsx  ScalePanel.tsx  SignalTile.tsx  WbgtGauge.tsx
web/src/lib/: signals.ts
(+33 files in other folders)
